--- a/documents/rapport/rapport/abstract.tex
+++ b/documents/rapport/rapport/abstract.tex
@@ -8,11 +8,11 @@ Ce projet a été réalisé dans le cadre du cours de Projet de Programmation, d
 
 Le sujet proposé par notre client Emmanuel Fleury est de générer de manière procédurale un terrain sphérique similaire à une planète pour ensuite l’afficher à l’écran.
 
-La méthode de génération de terrains utilisée sur demande du client est celle de "\emph{Continous Distance-Dependent Level Of Detail}" (CDLOD) implémenté par Filip Strugar~\cite{CDLOD}, qui est un algorithme reposant sur la distance entre la caméra et le terrain pour l'affichage des détails de la sphère.\\
+La méthode d'affichage du terrain utilisée sur demande du client est celle de "\emph{Continous Distance-Dependent Level Of Detail}" (CDLOD) implémenté par Filip Strugar~\cite{CDLOD}, qui est un algorithme reposant sur la distance entre la caméra et le terrain pour l'affichage des détails de la sphère.\\
 
 Lors de ce projet de programmation, nous avons repris une implémentation de Robert Lindner de la génération d'une sphère appliquant la méthode CDLOD \footnote{\url{https://github.com/Illation/PlanetRenderer}, dernier accès: avril 2018} (version reprise en février 2018 et sous licence MIT).
 
-Nous avons donc par la suite dû analyser et nettoyer une partie du code, qui ne correspondait pas aux exigences du projet, et ajouter une méthode de génération procédurale de terrain, permettant donner du relief à la sphère lui donnant ainsi l'aspect d'une planète. 
+Nous avons donc par la suite dû analyser et nettoyer une partie du code qui ne correspondait pas aux exigences du projet et ajouter une méthode de génération procédurale de terrain permettant donner du relief à la sphère lui donnant ainsi l'aspect d'une planète.
 
 {\Large
 \begin{center}
