--- a/documents/rapport/rapport/annexe/annexe.tex
+++ b/documents/rapport/rapport/annexe/annexe.tex
@@ -1,13 +1,11 @@
   \chapter*{Annexe}
   \addcontentsline{toc}{chapter}{Annexe}
 
-
   \input{annexe/ChunckedLOD.tex}
   
+  \newpage
  \input{annexe/usage.tex}
- 
+   \newpage
  \input{annexe/optionnal.tex}
- 
+   \newpage
  \input{annexe/screen.tex}
- 
- \input{annexe/other.tex}
