--- a/documents/rapport/rapport/annexe/optionnal.tex
+++ b/documents/rapport/rapport/annexe/optionnal.tex
@@ -1,4 +1,4 @@
-\section*{ArgvParser}
+no\section*{Section: ArgvParser}
 
 \lstset{language=C++}
   \begin{lstlisting}
@@ -20,3 +20,4 @@
      };
   \end{lstlisting}
   
+  \newpage
