--- a/documents/rapport/rapport/annexe/screen.tex
+++ b/documents/rapport/rapport/annexe/screen.tex
@@ -1,24 +1,24 @@
-\section*{Bruit de simplex}
+\section*{Section: Bruit de simplex}
 
 \begin{center}
 
-\begin{figure}
+\begin{figure}[H]
     \centering
-    \includegraphics[width=13cm]{img/SIMPLEX_w800_h800_wire_0.png}
-    \includegraphics[width=13cm]{img/SIMPLEX_w800_h800_wire_1.png}
+    \includegraphics[width=10cm]{img/SIMPLEX_w800_h800_wire_0.png}
+    \includegraphics[width=10cm]{img/SIMPLEX_w800_h800_wire_1.png}
     \caption{./ProceduralPlanet SIMPLEX --width=800 --height=800}
     \label{fig:simplex_800}
 \end{figure}
 
 
-\begin{figure}
+\begin{figure}[H]
     \centering
-    \includegraphics[width=13cm]{img/SIMPLEX_w200_h200_wire_0.png}
-    \includegraphics[width=13cm]{img/SIMPLEX_w200_h200_wire_1.png}
+    \includegraphics[width=10cm]{img/SIMPLEX_w200_h200_wire_0.png}
+    \includegraphics[width=10cm]{img/SIMPLEX_w200_h200_wire_1.png}
     \caption{./ProceduralPlanet SIMPLEX --width=200 --height=200}
     \label{fig:simplex_200}
 \end{figure}
 
-\end{center}
+\end{center} 
 
 \newpage
