--- a/documents/rapport/rapport/biblio.bib
+++ b/documents/rapport/rapport/biblio.bib
@@ -1,6 +1,6 @@
 @article{CDLOD,
   author = { Filip   Strugar },
-  title = {Continuous Distance-Dependent Level of Detail for Rendering Heightmaps},
+  title = {repris es},
   journal = {Journal of Graphics, GPU, and Game Tools},
   volume = {14},
   number = {4},
