--- a/documents/rapport/rapport/main.tex
+++ b/documents/rapport/rapport/main.tex
@@ -44,6 +44,11 @@
   
   \thispagestyle{empty}
 
+ \newpage
+  
+  \input{annexe/remerciements.tex}
+  
+  \thispagestyle{empty}
 
 
   %-----------------------------------------------------------------%
@@ -59,8 +64,8 @@
   %    DEFINITION
   %-----------------------------------------------------------------%
   
-  \newpage
- % \input{definitions.tex}
+  %\newpage
+  %\input{definitions.tex}
   
 
   %-----------------------------------------------------------------%
