--- a/documents/rapport/rapport/definitions.tex
+++ b/documents/rapport/rapport/definitions.tex
@@ -1,13 +1,13 @@
-  \chapter*{Définitions}
-    Cette partie regroupe les définitions des différentes notion et notation utilisées dans le rapport.
+  \chapter*{Lexique}
+    %Cette partie regroupe les définitions des différentes notion et notation utilisées dans le rapport.
     
     %TODO
     
-    \paragraph{Maillage} Le maillage est la représentation d'un modèle sous forme d'un ensemble de sommets relié par des arêtes de manières à former des triangles ou des carrés. Dans ce projet, le maillage est uniquement formé à partir de triangle.
+    \paragraph{Maillage}\label{def:maillage} Le maillage est la représentation d'un modèle sous forme d'un ensemble de sommets relié par des arêtes de manières à former des triangles ou des carrés. Dans ce projet, le maillage est uniquement formé à partir de triangle.
     
-    \paragraph{Carte de hauteur} La carte de hauteur ou Heightmap est une représentation sur une image en deux dimensions d'une troisième dimension définie comme l'altitude. 
+    %\paragraph{Carte de hauteur}\label{def:heightmap} La carte de hauteur ou Heightmap est une représentation sur une image en deux dimensions d'une troisième dimension définie comme l'altitude. 
     
-    \paragraph{CDLOD} Continuous Distance-Dependent Level of Detail
-    \paragraph{Quadtree} Un Quadtree ou arbre quaternaire est une structure de données représentant un arbre avec quatre fils.
-    \paragraph{Texel} Un texel est une unité d'une texture, il est l'homologue du pixel sur une image.
+    %\paragraph{CDLOD}\label{def:cdlod} Continuous Distance-Dependent Level of Detail
+    \paragraph{Quadtree}\label{def:quadtree} Un Quadtree ou arbre quaternaire est une structure de données représentant un arbre avec quatre fils.
+    \paragraph{Texel}\label{def:texel} Un texel est une unité d'une texture, il est l'homologue du pixel sur une image.
     %\paragraph{Interpolation}
